Added a new system, Engravings, which are like enchantments that cannot be removed, and are harder to get. There is also a limit of 3 Engravings per piece of equipment.
Added four different shriving stones, 2 add engravings, 1 removes curses, 1 removes currently active engraving adding shriving stone.
Only one engraving adding shriving stone can be active at a time.

Also added a book, the Engraving Guide Book, which teaches you everything you need to know about Engravings.
If you place a piece of gear into the book and it has an Engraving, it will explain exactly what that Engraving does.

Currently there are 21 engravings, but there will be more.
3 armor engravings, 2 sword engravings, 5 weapon engravings, 4 tool engravings, 5 general engravings, and 2 curses.